Enable PasswordManagerBrowserTestBase.SameOriginIframeAutoFillTest to get more data

Currently we know that password_field.value was not expected. The CL changes CheckElementValue() so that it outputs more data for all the password tests.
Flakiness in the test may even signify a real bug.

BUG=683209

Review-Url: https://codereview.chromium.org/2776513002
Cr-Commit-Position: refs/heads/master@{#459254}

Former-commit-id: 331224fb38ef3a2ef7bcc5eadb7592a0bebd0d02